tests/cases/fail/dict_key_type.p4
def main() -> None:
    colors: dict[str, str] = dict_str_str()
    colors.set('a', "red")
